# finchat-sec-qa

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  .releaserc.yml  .secrets.baseline  .yamllint.yaml  ADVANCED_SDLC_MODERNIZATION_REPORT.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.json  DEVELOPMENT_PLAN.md  Makefile  PERFORMANCE_ANALYSIS_REPORT.md  PHOTONIC_QUANTUM_IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_OPTIMIZATION.md  PROJECT_CHARTER.md  QUANTUM_ADAPTIVE_INTELLIGENCE_RESEARCH_PAPER.md  QUANTUM_FINANCE_IMPLEMENTATION_SUMMARY.md  QUANTUM_FINANCE_RESEARCH_PAPER.md  README.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SPRINT_BOARD.md  TERRAGON_ADAPTIVE_SDLC_ENHANCEMENT_REPORT.md  TERRAGON_AUTONOMOUS_QUANTUM_RESEARCH_PAPER.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT_v4_FINAL.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_OPTIMIZATION_REPORT.md  TERRAGON_BREAKTHROUGH_QUANTUM_RESEARCH_COMPLETION_REPORT.md  (+54 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  comprehensive-ci.yml  dependency-updates.yml
.terragon/: README.md  autonomous-execution.sh  value-config.yaml  value-metrics.json
config/: nginx-quantum.conf
docker/: Dockerfile.api  Dockerfile.quantum-api  Dockerfile.webapp  docker-compose.production.yml  entrypoint.sh  prometheus.yml  quantum-production-compose.yml  webapp-entrypoint.sh
docker/entrypoints/: quantum-api-entrypoint.sh
docs/: API_USAGE_GUIDE.md  BOUNDED_CACHE_IMPLEMENTATION.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  DISTRIBUTED_RATE_LIMITING.md  DOCKER_DEPLOYMENT.md  ENCRYPTION_UPGRADE.md  PERFORMANCE_TESTING.md  QUANTUM_ALGORITHMS_IMPLEMENTATION_GUIDE.md  QUANTUM_FINANCIAL_ALGORITHMS_RESEARCH_PAPER.md  REQUEST_SECURITY.md  ROADMAP.md  SDK_USAGE_GUIDE.md  SECRETS_MANAGEMENT.md  SETUP_REQUIRED.md  WORKFLOW_REQUIREMENTS.md  requirements.md  setup.md
docs/adr/: 0001-architecture-decision-records.md  0002-joblib-over-pickle.md  0003-async-architecture.md  0004-comprehensive-testing-strategy.md
docs/compliance/: SLSA_COMPLIANCE.md
docs/deployment/: build-system.md
docs/monitoring/: alert_rules.yml  grafana-dashboard.json  observability-guide.md
docs/runbooks/: incident_response.md  monitoring-setup.md  operational_procedures.md  performance_monitoring.md
docs/security/: THREAT_MODEL.md
docs/status/: autonomous_completion_report_2025_07_24.md  autonomous_improvement_session_2025-07-23.json  autonomous_maintenance_cycle_2025_07_26.md  autonomous_session_2025_07_25.md  autonomous_session_2025_07_26_final.md
docs/testing/: README.md  strategy.md
docs/workflows/: ENTERPRISE_AUTOMATION_GUIDE.md  README.md  dependency-updates.yml  performance-monitoring.yml  release-automation.yml  setup-guide.md
examples/: async_usage.py  basic_usage.py  quantum_adaptive_intelligence_demo.py  quantum_benchmark_runner.py  quantum_breakthrough_research_demo.py  quantum_monitoring_demo.py
quantum_test_env/: pyvenv.cfg
scripts/: automate_maintenance.py  automated_maintenance.py  autonomous_value_discovery.py  benchmark.py  build.sh  collect_metrics.py  compare_performance.py  deploy-production.sh  deploy_production.sh  dev_automation.py  generate_performance_report.py  generate_sbom.py  load_test.py  memory_profile.py  metrics_automation.py  quality_gates_comprehensive_validation.py  run_comprehensive_tests.py  update_version.py  verify_performance_tools.py
src/finchat/: __init__.py  agent.py
src/finchat_sec_qa/: __init__.py  adaptive_learning.py  advanced_monitoring_and_alerting.py  advanced_monitoring_security.py  advanced_scaling_engine.py  auto_scaling.py  autonomous_intelligence_engine.py  autonomous_sdlc_engine.py  autonomous_value_engine.py  circuit_breaker.py  citation.py  cli.py  comprehensive_monitoring.py  comprehensive_quality_gates.py  (+66 more)
tests/: __init__.py  conftest.py  sprint_acceptance_criteria.json  test_advanced_scaling_engine.py  test_async_edgar_client.py  test_attach-citations-to-qa-responses.py  test_autonomous_value_engine.py  test_bounded_cache_memory_safety.py  test_citation_position_accuracy.py  test_cli_subcommands.py  test_comprehensive_monitoring.py  test_config.py  test_contributor_documentation.py  test_cors_configuration.py  test_create-cli-command-to-display-citations.py  test_design-citation-data-model.py  test_distributed_rate_limiting.py  test_docker_integration.py  test_edgar_client_integration.py  test_edgar_client_refactoring.py  test_edgar_validation.py  test_enhanced_authentication.py  test_enhanced_security_module.py  test_extract-citation-anchors-from-filings.py  test_finchat_agent.py  test_foundational.py  test_lazy_cache_cleanup.py  test_logging_and_timeouts.py  test_metrics_unit.py  test_multi_company_analysis.py  test_performance_benchmarks.py  test_performance_optimization.py  test_persistence.py  test_photonic_bridge.py  test_photonic_mlir.py  test_prometheus_metrics.py  test_qa_engine_bulk_operations.py  test_qa_engine_chunking_refactor.py  test_quantum_adaptive_intelligence.py  test_quantum_breakthrough_multimodal_engine.py  (+19 more)
(+21 files in other folders)
