[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finchat_sec_qa"
version = "1.4.5"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "httpx",
    "scikit-learn",
    "numpy",
    "joblib",
    "vaderSentiment",
    "fastapi",
    "uvicorn",
    "flask",
    "prometheus_client",
]

[project.optional-dependencies]
voice = ["pyttsx3"]
dev = ["pre-commit"]
performance = ["aiohttp", "pytest", "pytest-asyncio"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["finchat", "finchat_sec_qa"]
